# boxing-gym

./: README.md  agent.py  box_loop_experiment.py  box_loop_helper.py  crfm.py  crfm_credit.py  crfm_test.py  death_process.py  dugongs.py  emotion.py  hyperbolic_temporal_discount.py  irt.py  llm.py  location_finding.py  lotka_volterra.py  model_search.py  moral_machines.py  oed.ipynb  openai_wrapper.py  peregrines.py  plot_utils.py  ppl_gen_model.py  pyproject.toml  rat_tumor.py  requirements.txt  run_eig_regret.py  run_experiment.py  run_experiment_197.py  setup.py  social.py  survival_analysis.py
analysis/: discovery-box.ipynb  discovery.ipynb  oed-box.ipynb
conf/: config.yaml  lotka_volterra_direct.yaml
conf/envs/: emotion_direct.yaml  emotion_direct_discovery.yaml  morals_direct.yaml  morals_direct_discovery.yaml
results/death_process/: direct_discovery_gpt-4o-boxloop_discovery_False_1.json  direct_discovery_gpt-4o-boxloop_discovery_False_2.json  direct_discovery_gpt-4o-boxloop_discovery_False_3.json  direct_discovery_gpt-4o-boxloop_discovery_False_4.json  direct_discovery_gpt-4o-boxloop_discovery_False_5.json  direct_discovery_gpt-4o-boxloop_discovery_True_1.json  direct_discovery_gpt-4o-boxloop_discovery_True_2.json  direct_discovery_gpt-4o-boxloop_discovery_True_3.json  direct_discovery_gpt-4o-boxloop_discovery_True_4.json  direct_discovery_gpt-4o-boxloop_discovery_True_5.json  direct_discovery_gpt-4o_discovery_False_1.json  direct_discovery_gpt-4o_discovery_False_2.json  direct_discovery_gpt-4o_discovery_False_3.json  (+34 more)
scripts/: hyperbolic.sh  signal.sh
(+350 files in other folders)
